--- a/index.html
+++ b/index.html
@@ -21,34 +21,36 @@
             <div class="campo">
                 <label for="">Color del codigo</label>
                 <div class="colores">
-                    <label for="" class="color-option" style="background-color: #000 ;"></label>
-                    <input type="radio" name="color" value="#000" checked>
+                    <label for="" class="color-option" style="background-color: #000 ;">
+                        <input type="radio" name="color" value="#000" checked>
+                    </label>
 
-                    <label for="" class="color-option" style="background-color: #ff0000 ;"></label>
-                    <input type="radio" name="color" value="#ff0000">
+                    <label for="" class="color-option" style="background-color: #ff0000 ;">
+                        <input type="radio" name="color" value="#ff0000">
+                    </label>
 
-                    <label for="" class="color-option" style="background-color: #006eff ;"></label>
-                    <input type="radio" name="color" value="#006eff">
+                    <label for="" class="color-option" style="background-color: #006eff ;">
+                        <input type="radio" name="color" value="#006eff">
+                    </label>
 
-                    <label for="" class="color-option" style="background-color: #ff6600 ;"></label>
-                    <input type="radio" name="color" value="#ff6600">
+                    <label for="" class="color-option" style="background-color: #ff6600 ;">
+                        <input type="radio" name="color" value="#ff6600">
+                    </label>
 
-                    <label for="" class="color-option" style="background-color: #ff00d4 ;"></label>
-                    <input type="radio" name="color" value="#ff00d4">
+                    <label for="" class="color-option" style="background-color: #ff00d4 ;">
+                        <input type="radio" name="color" value="#ff00d4">
+                    </label>
                 </div>
-
+            </div>
                 <button class="btn">Generar Codigo QR</button>
                 <button class="btn">Descargar QR</button>
                 <button class="btn">Crear otro codigo</button>
-
-                <div class="preview">
-                    <div class="phone-frame">
-                        <div class="qr-container">
-                            <canvas>
-                            </canvas>
-                            <p>Escaneame</p>
-                        </div>
-                    </div>
+        </div>
+        <div class="preview">
+            <div class="phone-frame">
+                <div class="qr-container">
+                    <canvas></canvas>
+                    <p>Escaneame</p>
                 </div>
             </div>
         </div>
