--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <label for="total">Total</label>
                 <input type="text" id="total" disabled>
             </div>
-            <button class="btn" id="btn-generar" onclick="generarConsumo()">Generar venta aleatoria</button>
+            <button class="btn" id="btn-generarVenta" onclick="generarVenta()">Generar venta aleatoria</button>
         </div>
         <div class="formulario">
             <h2>Generador de códigos QR</h2>
@@ -36,6 +36,8 @@
             </div>
             <div class="campo">
                 <label>Color del codigo</label>
+                <input type="color" class="colorPicker" value="#FFDD00" name="colorPicker">
+<!-- 
                 <div class="colores">
                     <label class="color-option" style="background-color: #000 ;">
                         <input type="radio" name="color" value="#000">
@@ -57,6 +59,7 @@
                         <input type="radio" name="color" value="#ff00d4">
                     </label>
                 </div>
+                -->
             </div>
             
                 <button class="btn" id="btn-generar" onclick="generarQR()" disabled>Generar Codigo QR</button>
