more names added

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 <input type="text" id="texto" placeholder="Ej. Factura en www.facturaAqui.com">
             </div>
             <div class="campo">
-                <label>Color del codigo</label>
-                <input type="color" class="colorPicker" value="#FFDD00" name="colorPicker">
+                <label>Color del codigo
+                    <input type="color" class="colorPicker" value="#006eff" name="colorPicker">
+                </label>
 <!-- 
                 <div class="colores">
                     <label class="color-option" style="background-color: #000 ;">
@@ -70,7 +71,7 @@
             <div class="phone-frame">
                 <div class="qr-container">
                     <canvas id="qrCode"></canvas>
-                    <p>Escaneame</p>
+                    <p>Escanéame</p>
                 </div>
             </div>
         </div>
