factura page added, factura.js file added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container">
+        <!-- <a href="factura.html?numero=1468098&cliente=Natalia_Torres&total=656.16">factura</a>-->
+        <a href="factura.html">factura</a>
         <div class="venta">
             <h2>Información de la venta</h2>
             <div class="campoVenta">
