--- a/index.html
+++ b/index.html
@@ -7,79 +7,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <!-- <a href="factura.html?numero=1468098&cliente=Natalia_Torres&total=656.16">factura</a>-->
-        <a href="factura.html">factura</a>
-        <div class="venta">
-            <h2>Información de la venta</h2>
-            <div class="campoVenta">
-                <label for="nConsumo">Número de consumo</label>
-                <input type="text" id="nConsumo" disabled>
-            </div>
-            <div class="campoVenta">
-                <label for="cliente">Cliente</label>
-                <input type="text" id="cliente" disabled>
-            </div>
-            <div class="campoVenta">
-                <label for="total">Total</label>
-                <input type="text" id="total" disabled>
-            </div>
-            <button class="btn" id="btn-generarVenta" onclick="generarVenta()">Generar venta aleatoria</button>
-        </div>
-        <div class="formulario">
-            <h2>Generador de códigos QR</h2>
-            <div class="campo">
-                <label for="nombre">Nombre del código</label>
-                <input type="text" id="nombre" placeholder="Ej. qrFactura">
-            </div>
-            <div class="campo">
-                <label for="texto">Texto del código</label>
-                <input type="text" id="texto" placeholder="Ej. Factura en www.facturaAqui.com">
-            </div>
-            <div class="campo">
-                <label>Color del codigo
-                    <input type="color" class="colorPicker" value="#006eff" name="colorPicker">
-                </label>
-<!-- 
-                <div class="colores">
-                    <label class="color-option" style="background-color: #000 ;">
-                        <input type="radio" name="color" value="#000">
-                    </label>
-
-                    <label class="color-option" style="background-color: #ff0000 ;">
-                        <input type="radio" name="color" value="#ff0000">
-                    </label>
-
-                    <label class="color-option" style="background-color: #006eff ;">
-                        <input type="radio" name="color" value="#006eff">
-                    </label>
-
-                    <label class="color-option" style="background-color: #ff6600 ;">
-                        <input type="radio" name="color" value="#ff6600">
-                    </label>
-
-                    <label class="color-option" style="background-color: #ff00d4 ;">
-                        <input type="radio" name="color" value="#ff00d4">
-                    </label>
-                </div>
-                -->
-            </div>
-            
-                <button class="btn" id="btn-generar" onclick="generarQR()" disabled>Generar Codigo QR</button>
-                <button class="btn" id="btn-descargar" onclick="descargarQR()" disabled>Descargar QR</button>
-                <button class="btn" onclick="reiniciarFormulario()">Crear otro codigo</button>
-        </div>
-        <div class="preview">
-            <div class="phone-frame">
-                <div class="qr-container">
-                    <canvas id="qrCode"></canvas>
-                    <p>Escanéame</p>
-                </div>
-            </div>
-        </div>
+    <header>
+        <nav>
+            <a href="https://cbotello.github.io">
+                <img src="img/icon.jpg" alt="Home" class="nav-icon">
+            </a>
+            <ul class="nav-list">
+                <li><a href="qrcode.html">qrcode</a></li>
+                <li><a href="#">Acerca de</a></li>
+                <li><a href="index.html">Inicio</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="banner">
+        <img src="img/banner1.jpg" alt="Banner">
+        <h1>Librerias para generar códigos QR </h1>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-    <script src="js/app.js"></script>
 </body>
 </html>
