first librari added

--- a/index.html
+++ b/index.html
@@ -23,17 +23,20 @@
         <img src="img/banner1.jpg" alt="Banner">
         <h1>Librerias para generar códigos QR </h1>
     </div>
-    <div class="container">
+    <div class="IndexContainer">
         <div class="info">
             <h2>Crea tu propio QR</h2>
             <p>En este sitio encontrarás diferentes librerías para generar códigos QR en tus proyectos web. Estas librerías te permitirán crear códigos QR personalizados con facilidad, ya sea para compartir enlaces, información de contacto, o cualquier otro tipo de dato que desees codificar.</p>
             <p>Explora las opciones disponibles y elige la que mejor se adapte a tus necesidades ya que cada librería tiene sus pros y sus contras.</p>
         </div>
         <div class="tiposCodigos">
-            <h2>Librerías disponibles</h2>
+            <h3>Librerías disponibles</h3>
             <ul>
                 <li><a href="qrcode.html">qrcode</a>: Una librería sencilla y fácil de usar para generar códigos QR en JavaScript. Ideal para proyectos pequeños y medianos.</li>
-                <li><a href="kjua.html">kjua</a>: Una librería más avanzada que ofrece una mayor personalización y opciones para generar códigos QR. Perfecta para proyectos que requieren características adicionales.</li>
+                <div class="QRimages">
+                    <img src="img/qrb.png" alt="QR black"><img src="img/qrg.png" alt="QR green"><img src="img/qrr.png" alt="QR red">
+                </div>
+                <!--<li><a href="kjua.html">kjua</a>: Una librería más avanzada que ofrece una mayor personalización y opciones para generar códigos QR. Perfecta para proyectos que requieren características adicionales.</li>-->
             </ul>
         </div>
 </body>
