header and banner added

--- a/factura.html
+++ b/factura.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="https://cbotello.github.io">
+                <img src="img/icon.jpg" alt="Home" class="nav-icon">
+            </a>
+            <ul class="nav-list">
+                <li><a href="qrcode.html">qrcode</a></li>
+                <li><a href="#">Acerca de</a></li>
+                <li><a href="index.html">Inicio</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="banner">
+        <img src="img/banner1.jpg" alt="Banner">
+        <h1>qrcode </h1>
+    </div>
     <div class="container">
         <a href="index.html">Regresar</a>
         <div class="venta">
